Fixed the editor being covered by the sidebar

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -8,3 +8,6 @@
   width: 150px
   height: 10px
   border-radius: 5px
+
+.ui.bottom.attached
+  overflow: hidden
